# ArenaMCP

./: .env.example  .gitignore  ADVISOR_TUNING_GUIDE.md  AGENTS.md  ArenaMCP.md  BEFORE_AFTER_COMPARISON.md  BUG_FIXES_20260206.md  CLAUDE.md  CROSS_PROJECT_TASKS.md  DECISION_IMPROVEMENTS.md  DEV.md  DIVERGENCE_SUMMARY.md  DIVERGENCE_WORKFLOW.md  GEMINI.md  INSTALL.md  OPTION_C_SUMMARY.md  README.md  RELEASE.md  arenamcp.spec  autopilot.bat  build_windows.py  check_cards_schema.py  check_db.py  check_loc.py  check_loc_base.py  check_loc_old.py  check_models_v2.py  check_order_title.py  check_set.py  check_set_simple.py  coach.bat  devices.json  extract_seat_json.py  infer_seat.py  install.bat  installer.iss  launch.bat  launcher.py  list_tables.py  parse_match_event.py  (+11 more)
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
docs/: AGENT_ARCHITECTURE.md
installer/: build-installer.ps1  mtgacoach.iss
proxy-server/: app.py  config.yaml  db.py  providers.py
scripts/: build_release.ps1  launch_desktop.py  launch_installed.py
tests/: __init__.py  test_action_planner_fallback.py  test_action_planner_legality.py  test_autopilot_bridge_gap_hint.py  test_autopilot_bridge_lock.py  test_autopilot_card_name_normalize.py  test_autopilot_execution_paths.py  test_autopilot_stale_vs_bridge.py  test_battlefield_layout.py  test_bugreport.py  test_card_db.py  test_coach_codex_and_fallback.py  test_coach_models.py  test_coach_postprocess_lands.py  test_decision_tracking.py  test_desktop_audio.py  test_divergence_integration.py  test_gamestate_checkpoint.py  test_gamestate_lands_played_inference.py  test_gre_serializer.py  test_hand_arc_geometry.py  test_integration.py  test_launcher.py  test_parser_robustness.py  test_pipe_voice_output.py  test_poll_interval.py  test_proxy_backend_timeout.py  test_stale_clear.py  (+8 more)
(+150 files in other folders)
