[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arenamcp"
version = "0.1.0"
description = "Real-time MCP server bridging MTGA game logs to Claude for conversational game analysis"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arenamcp"]
